# lcdlfc

./: .gitignore  README.md  example.env  example.targets.csv  main.py  pyproject.toml
cfg/: osenv.py  webbrowser.py
lacasa/: votaciones.py
