[tool.poetry]
name = "lcdlfc"
version = "0.1.0"
description = ""
authors = ["Sebastian Rios Sabogal <sebaxtianrioss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.18.1"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
icecream = "^2.1.3"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
